# mapiX

./: .main.swp  CMakeLists.txt  NoiseData.root  README.md  ROIspreadsheet.ods  macro.C  main.cpp  setup.sh  v
config/: ChannelFile.txt  PixLArChannelMapping.txt  PixelCoordinates.json  Pixel_Coordinates_ID_Down.json  TrackFile.txt  TrackFiles.txt
data/: Histograms.root  NoiseData.root
include/: ChannelData.h  Event.h  EventData.h  HitFinder.h  MapChannelsToPixels.h  MapCoordinatesToPixels.h  MapToPixels.h  PixelCoordinates.h
output/: Histograms.root
scripts/: MapixEventDisplay.C  pixelPaletteColors.C  roiPaletteColors.C  roiPaletteColors2.C  xyzPlot.py
src/: .HitFinder.cpp.swp  ChannelData.cpp  EventData.cpp  HitFinder.cpp  MapChannelsToPixels.cpp  MapCoordinatesToPixels.cpp  MapToPixels.cpp  PixLArReco_module.cc  PixelCoordinates.cpp
